@@ -11,6 +11,7 @@ Version 5.0.4
   Bug #25726 MySqlConnection throws NullReferenceException and ArgumentNullException 
   Bug #25609 MySqlDataAdapter.FillSchema 
   Bug #25928 Invalid Registry Entries 
+  Bug #25912 selecting negative time values gets wrong results 
   
   Other changes
   -------------
